# algobox-2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: algo_math.h  algo_search.h  algo_select.h  algo_sort.h  algo_utils.h
src/: algo_search.c  algo_select.c  algo_sort.c  algo_utils.c
srt/: algo_math.c  algo_sort.c
tests/: test_counting.c  test_math.c  test_search.c  test_select.c  test_sort.c
